--- a/src/styles/CurrencySelector.css
+++ b/src/styles/CurrencySelector.css
@@ -1,6 +1,10 @@
 .custom-select {
     margin-bottom: 1rem;
   }
+
+  .custom-select select, .custom-select option {
+    font-family: inherit;
+  }
   
   .custom-select label {
     display: block;
